k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-buddy
  labels:
    name: k8s-buddy
    managed-by: k8s-buddy
