k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buddy-api
  namespace: k8s-buddy
  labels:
    app: buddy-api
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: buddy-api
---
apiVersion: v1
kind: Service
metadata:
  name: buddy-worker
  namespace: k8s-buddy
  labels:
    app: buddy-worker
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: http
  selector:
    app: buddy-worker
---
apiVersion: v1
kind: Service
metadata:
  name: chaos-buddy
  namespace: k8s-buddy
  labels:
    app: chaos-buddy
spec:
  type: ClusterIP
  ports:
  - port: 8082
    targetPort: 8082
    protocol: TCP
    name: http
  selector:
    app: chaos-buddy
